tests/fail/semantics/missing_content/main.kira
annotation State {
}

construct Widget {
    annotations {
        @State;
    }

    content {
        content {
            count 1..
        }
    }
}

Widget Card() {
}
